--- a/static/404.html
+++ b/static/404.html
@@ -4,6 +4,11 @@
 	<title>Page not found | Maude</title>
 	<meta charset="utf-8"/>
 	<style>html { height: 100%; margin: 0; } body { margin: 0; background-color: #f1f1f1; display: flex; justify-content: center; align-items: center; height: 100%; text-align: center; flex-direction: column; font-family: sans-serif;  } a { text-decoration: none; } </style>
+	<script>
+const assetsRoot = "https://github.com/maude-lang/maude-lang.github.io/releases/download/maude/";
+const redirects = {"/manual.pdf": `${assetsRoot}Maude3.5.1-manual.pdf`, "/manual-book-examples.zip": `${assetsRoot}Maude-3.5.1-manual-book-examples.zip`, "/w/images/6/62/Maude-3.1-manual.pdf": `${assetsRoot}Maude-3.1-manual.pdf`, "/w/images/6/63/Maude-primer.pdf": `${assetsRoot}maude-primer.pdf`, "/wiki/MediaWiki:Mainpage": "/", "/wiki/The_Maude_System": "/", "/wiki/Maude_Mailing_Addresses_and_Lists": "/lists"};
+let target = redirects[location.pathname]; if (target) location.assign(target);
+	</script>
 </head>
 <body>
   <span style="font-size: 300%; font-weight: bold; color: #aa1010;">404 · Not found</span>
